# cardgame-rs

./: Cargo.toml  README.md
cardgame/: Cargo.toml
cardgame-bevy-client/: Cargo.toml
cardgame-bevy-client/src/: chat.rs  console_plugin.rs  game_render.rs  logon.rs  main.rs  ui.rs
cardgame-bevy-server/: Cargo.toml
cardgame-bevy-server/src/: lobby.rs  main.rs  server_network.rs
cardgame-client/: Cargo.toml
cardgame-client-console/: Cargo.toml
cardgame-client-console/src/: main.rs
cardgame-client/src/: main.rs  mod.rs
cardgame-common/: Cargo.toml
cardgame-common/src/: lib.rs  message.rs  tests.rs
cardgame-server/: Cargo.toml
cardgame-server/src/: lobby.rs  main.rs  player_manager.rs  server_lobby.rs  server_mod.rs  server_network.rs
cardgame/src/: card.rs  error.rs  game.rs  lib.rs  lobby.rs  messages.rs  player.rs  rule.rs  user.rs
src/: card.rs  game.rs  main.rs  player.rs  rule.rs
src/client/: client.rs  device.rs
src/server/: mod.rs  server.rs
