[package]
authors = ["Lasm Gratel <lasm_gratel@hotmail.com>"]
edition = "2018"
name = "cardgame-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4"
message-io = "0.13"
num-derive = "0.3"
num-traits = "0.2"
rand = "*"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
