[package]
name = "cardgame-server"
version = "0.1.0"
authors = ["Lasm Gratel <lasm_gratel@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardgame = { path = "../cardgame" }
bincode = "1.3.3"
message-io = "0.13"
uuid = {version = "0.8", features = ["serde", "v4"]}
