[package]
name = "cardgame"
version = "0.1.0"
authors = ["Lasm Gratel <lasm_gratel@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
log = "0.4"
rand = "*"
regex = "1"
num-derive = "0.3"
num-traits = "0.2"